--- a/app/views/main/user_page.html.erb
+++ b/app/views/main/user_page.html.erb
@@ -33,7 +33,17 @@ body {
 .white{
   color: #ffffff;
 }
-
+a.list-group-item{
+  min-height: 60px;
+  font-size: 20px;
+  color: #000000;
+  border: none;
+}
+a.list-group-item:hover, a.list-group-item:focus{
+  opacity: 1;
+  background-color: #4D4D4D;
+  color: #FFFFFF;
+}
 #sidebar {
   height: 100%;
   padding-right: 0;
@@ -65,22 +75,21 @@ body {
   line-height: 25px;
 }
 #sidebar li a:hover {
-  background-color:#222222;
-  color:#ffffff;
+  opacity: 1;
+  background-color:#A4C5C2;
+  color: #ffffff;
 }
 #sidebar li a b{
   text-align: center;
   font-size: 20px;
   letter-spacing: 5px;
 }
-#sidebar li a:hover{
-  color: white;
-}
 #follow{
   height: 60px;
   font-size: 25px;
   text-align: center;
   line-height: 60px;
+  margin-bottom: 10px;
 }
 /* collapsed sidebar styles */
 @media screen and (max-width: 767px) {
@@ -187,6 +196,11 @@ h3,h4,h5,.panel {
     padding: 10px 15px;  
     color: black;
 }
+.news_message{
+  font-size: 25px;
+  line-height: 1;
+  margin: 5px 5px;
+}
 .background1{
   background-color: #A4C5C2;
 }
@@ -216,21 +230,28 @@ h3,h4,h5,.panel {
  text-align: center; 
  font-size: 20px;
  background-color: white;
- color: #4D4D4D;
+ color: #000;
  font-weight: bold;
  min-height: 45px;
  line-height: 45px;
 }
+.post a{
+  color: #000;
+}
 .post:hover{
-  background-color: black;
+  background-color: #4D4D4D;
   color:white;
 }
-.post a:hover{
-  background-color: black;
+.post:hover a{
+  background-color: transparent;
   color: white;
 }
 .left-line{
   border-left:thick groove #000000;
+}
+.follow_hover:hover a p{
+  background-color: #4D4D4D;
+  color: #ffffff;
 }
 </style>
 <div class="page-container">
@@ -255,36 +276,28 @@ h3,h4,h5,.panel {
           <div class="row">
              <div class="col-sm-6">
                 <div class="panel panel-default">
-                  <div class="background1"><h3 class="news"><img src="../assets/newmessage-01.png" height="50px" width="50px" style="display:inline-block;margin-right:20px">你關注的軍師發戰帖了</h3></div>
+                  <div class="background1"><h3 class="news"><img src="../assets/newmessage-01.png" height="50px" width="50px" style="display:inline-block;margin-right:20px"><%=@user.name%>關注的軍師發戰帖了</h3></div>
                     <div class="panel-body">
                       <div class="list-group">
-                        <a href="#" class="list-group-item active">Active item</a>
-                        <a href="#" class="list-group-item">Second item</a>
-                        <a href="#" class="list-group-item">Third item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
+                        <a href="#" class="list-group-item background1"><%=image_tag(User.find(2).image, :style => "display:inline-block;float:left;padding-right:25px")%><p class="news_message"><%=User.find(2).name%>軍師發了新的戰帖</p></a>
+                        <a href="#" class="list-group-item background1">Second item</a>
+                        <a href="#" class="list-group-item background1">Third item</a>
+                        <a href="#" class="list-group-item background1">Another item</a>
+                        <a href="#" class="list-group-item background1">Another item</a>
                       </div>
                     </div><!--/panel-body-->
                 </div><!--/panel-->
             </div><!--/col-->
             <div class="col-sm-6">
                 <div class="panel panel-default">
-                  <div class="background1"><h3 class="news"><img src="../assets/newmessage-01.png" height="50px" width="50px" style="display:inline-block;margin-right:20px">你關注的公聽會要開戰了</h3></div>
+                  <div class="background1"><h3 class="news"><img src="../assets/newmessage-01.png" height="50px" width="50px" style="display:inline-block;margin-right:20px"><%=@user.name%>關注的公聽會要開戰了</h3></div>
                     <div class="panel-body">
                       <div class="list-group">
-                        <a href="#" class="list-group-item active">Active item</a>
-                        <a href="#" class="list-group-item">Second item</a>
-                        <a href="#" class="list-group-item">Third item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
-                        <a href="#" class="list-group-item">Another item</a>
+                        <a href="#" class="list-group-item background1"><%=image_tag(HearingConference.find(1).photo.show, :style => "display:inline-block;float:left;padding-right:25px;height:50px;width:80px;")%><p class="news_message"><%=HearingConference.find(1).title%></p></a>
+                        <a href="#" class="list-group-item background1">Second item</a>
+                        <a href="#" class="list-group-item background1">Third item</a>
+                        <a href="#" class="list-group-item background1">Another item</a>
+                        <a href="#" class="list-group-item background1">Another item</a>
                       </div>
                     </div><!--/panel-body-->
                 </div><!--/panel-->
@@ -292,17 +305,17 @@ h3,h4,h5,.panel {
           </div><!--/row-->
           
           <div id="section1" class="background1">
-            <h3 class="news"><img src="../assets/newmessage-01.png" height="70px" width="70px" style="display:inline-block;margin-right:10px">你關注的公聽會有新的戰況</h3>
+            <h3 class="news"><img src="../assets/newmessage-01.png" height="70px" width="70px" style="display:inline-block;margin-right:10px"><%=@user.name%>關注的公聽會有新的戰況</h3>
             <div class="panel-body background1">
               <div class="list-group">
-                <a href="#" class="list-group-item active">Active item</a>
-                <a href="#" class="list-group-item">Second item</a>
-                <a href="#" class="list-group-item">Third item</a>
+                <a href="#" class="list-group-item background1"><%=image_tag(HearingConference.find(2).photo.show, :style => "display:inline-block;float:left;padding-right:25px;height:50px;width:80px;")%><p class="news_message"><%=HearingConference.find(2).title%></p></a>
+                <a href="#" class="list-group-item background1">Second item</a>
+                <a href="#" class="list-group-item background1">Third item</a>
               </div>
             </div><!--/panel-->
           </div>
           <div id="section2" class="background1">
-            <h3 class="news"><img src="../assets/write-02.png" height="70px" width="70px" style="display:inline-block;margin-right:10px">你撰寫過的戰帖</h3>
+            <h3 class="news"><img src="../assets/write-02.png" height="70px" width="70px" style="display:inline-block;margin-right:10px"><%=@user.name%>撰寫過的戰帖</h3>
             <div class="row">
               <% @posts.each do |post| %>
               <div class="col-md-4">
@@ -312,10 +325,10 @@ h3,h4,h5,.panel {
             </div>
           </div>
           <div id="section3" class="background1">
-            <h3 class="news"><img src="../assets/eye-03.png" height="70px" width="70px" style="display:inline-block;margin-right:10px">你正在關注的公聽會戰役</h3>
+            <h3 class="news"><img src="../assets/eye-03.png" height="70px" width="70px" style="display:inline-block;margin-right:10px"><%=@user.name%>正在關注的公聽會戰役</h3>
             <div class="row">
                <% @hearingconferences.each do |hearingconference| %>
-              <div class="col-md-2 col-xs-3">
+              <div class="col-md-2 col-xs-3 follow_hover">
                 <a href="<%=hearing_conference_path(hearingconference)%>">
                    <%=image_tag(hearingconference.photo, class: "img-responsive img-thumbnail")%>
                   <p class="follow_user"><%=hearingconference.title%></p>
@@ -325,10 +338,10 @@ h3,h4,h5,.panel {
             </div>
           </div>
           <div id="section4" class="background1">
-            <h3 class="news"><img src="../assets/eye-03.png" height="70px" width="70px" style="display:inline-block;margin-right:10px">你正在關注的軍師</h3>
+            <h3 class="news"><img src="../assets/eye-03.png" height="70px" width="70px" style="display:inline-block;margin-right:10px"><%=@user.name%>正在關注的軍師</h3>
             <div class="row">
             <% @users.each do |user| %>
-              <div class="col-md-2 col-xs-3">
+              <div class="col-md-2 col-xs-3 follow_hover">
                 <a href="<%=user_page_path(user.id)%>">
                   <%= image_tag(user.image+"?type=normal") %>
                   <p class="follow_user"><%= user.name %></p>
@@ -351,10 +364,14 @@ h3,h4,h5,.panel {
   });
 
   $('#follow').hover(function(){
-    <% if (!current_user.following?(@user) && current_user.id != @user.id) %>
-    $('#follow').html('<%=button_to "關注此軍師", { action: "follow", id: current_user.id, user_id: @user.id }, class: "background1 follow"%>');
-    <% elsif (current_user.following?(@user) && current_user.id != @user.id) %>
-    $('#follow').html('<%=button_to "已經關注此軍師", { action: "unfollow", id:current_user.id, user_id: @user.id }, class: "background2 follow"%>');
+    <% if (current_user) %>
+      <% if (!current_user.following?(@user) && current_user.id != @user.id) %>
+      $('#follow').html('<%=button_to "關注此軍師", { action: "follow", id: current_user.id, user_id: @user.id }, class: "background1 follow"%>');
+      <% elsif (current_user.following?(@user) && current_user.id != @user.id) %>
+      $('#follow').html('<%=button_to "已經關注此軍師", { action: "unfollow", id:current_user.id, user_id: @user.id }, class: "background2 follow"%>');
+      <% end %>
+    <% else %>
+      $('#follow').html('<b class="white">請先登入才能關注</b>');
     <% end %>
   },function(){
     $('#follow').html('<strong class="white"><%=@user.name%></strong><b class="white">軍師的個人檔案</b>');
