fix navbar responsive font-size

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,3 +16,16 @@
     </div>
   </div>
 </nav>
+<script type="text/javascript">
+$( window ).resize(function() {
+  if ($(window).width()>=993) {
+    $('ul').find('a').css(
+      "font-size","20px"
+    );
+  }else{
+    $('ul').find('a').css(
+      "font-size","14px"
+    );
+  }
+});
+</script>
